--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate.ejs") %>
 <div class="row">
 <div class="col-8 offset-2">
-    <h3>Add new Airbnb:</h3>
+    <h3>Add new TravelAmingo:</h3>
     <form method="POST" action="/listings" class="needs-validation" novalidate enctype="multipart/form-data">
         <div class="mb-2">
             <label for="title" class="form-label">Title</label> 
@@ -14,7 +14,7 @@
             <div class="invalid-feedback">Add a valid description</div>
         </div>
         <div class="mb-2">
-            <label for="image" class="form-label">Upload Airbnb Image</label>      
+            <label for="image" class="form-label">Upload TravelAmingo Image</label>      
             <input type="file" name="listing[image]" class="form-control" required>
         </div>
         <div class="row">
