--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -4,12 +4,12 @@
 </script>
 <div class="row">
     <div class="col-8 offset-3">
-    <h3><%= listing.title %></h3>
+    <h3 class="mt-3 mb-2"><%= listing.title %></h3>
     </div>
     <div class="card col-6 offset-3 listing-card">
             <img src="<%= listing.image.url %>" class="card-img-top show-img" alt="listing_image">
             <div class="card-body">
-              <p class="card-text">Owned by
+              <p class="card-text mt-3">Owned by
                 <i>
                   <%= listing.owner.username %>
                 </i>
@@ -107,7 +107,7 @@
   <% } %>
     </div>
     <div class="col-8 offset-3 mb-3">
-      <h4>Where you'll find your Airbnb to be:</h4>
+      <h4>Where you'll be:</h4>
       <div id="map">
         
       </div>
